package com.vbs.no2a.Interfaces;

public interface Command {
    void apply();
    void cancel();
}
